<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="409dp"
                android:layout_height="729dp"
                android:orientation="vertical"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="1dp">

                <TextView
                    android:id="@+id/main_textView"
                    android:layout_width="351dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/main_textView"
                    android:textColor="@color/colorText"
                    android:textSize="36sp" />

                <SearchView
                    android:id="@+id/main_searchView"
                    android:layout_width="350dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:background="#68728E"
                    android:iconifiedByDefault="false"
                    android:isScrollContainer="false"
                    android:queryHint="@string/main_searchView_hint"
                    android:theme="@style/SearchViewTheme"
                    android:textColor="@color/colorText"
                    />


                <Button
                    android:id="@+id/addButton"
                    android:layout_width="212dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/addButton"
                    android:background="#0099FF"
                    android:textColor="@color/colorText"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <ListView
                    android:id="@+id/main_listView"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="20dp"
                    android:divider="@null" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>

